--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 .box-img{
     border-style: solid;
-    border-color: 0ffc3e;
+    border-color: #0ffc3e;
     border-radius: 50%;
     width: 200px;
     height: 200px;
