--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,11 @@ body {
     width: 200px;
     height: 200px;
 }
-/* .box-img:hover{
+.box-img:hover{
     border-width: 5px;
     border-style: solid;
-    border-color: 0ffc3e
-; */
+    border-color: #0ffc3e;
+;
 }
 .box h1 {
     color: #2bff00;
